# agent-protocol

./: README.md
agent-listener/src/: dashboard.ts  demo.ts
agent-protocol/programs/agent-protocol/: Cargo.toml
agent-protocol/programs/agent-protocol/src/: constants.rs  error.rs  events.rs  lib.rs
agent-protocol/programs/agent-protocol/src/instructions/: auto_release.rs  cancel_job.rs  close_job.rs  delegate_task.rs  invoke_agent.rs  mod.rs  raise_dispute.rs  rate_agent.rs  register_agent.rs  reject_job.rs  release_payment.rs  resolve_dispute.rs  resolve_dispute_arbiter.rs  stake_agent.rs  unstake_agent.rs  update_agent.rs  update_job.rs
agent-protocol/programs/agent-protocol/src/state/: agent_profile.rs  job.rs  mod.rs  stake_vault.rs
agent-protocol/tests/: agent-protocol.ts
blink-server/src/lib/: agents.ts  program.ts
blink-server/src/routes/: invoke.ts
docs/: _config.yml  frameworks.md  index.md  quickstart.md  sdk-reference.md
examples/: 01-register-agent.ts  02-hire-agent.ts  03-full-lifecycle.ts
